--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "week-3b",
-  "version": "0.0.0",
+  "name": "comp229-f2020-week3",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./server.js"
+  },
+  "engines": {
+    "node": "^12.00.0",
+    "npm": "^6.00.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
@@ -16,5 +20,18 @@
     "jquery": "^3.5.1",
     "morgan": "~1.9.1",
     "popper.js": "^1.16.1"
-  }
+  },
+  "description": "demo aap for COMP229 Week 3",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/psychoCS/COMP229-F2020-Test1.git"
+  },
+  "author": "Thiago Batista",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/psychoCS/COMP229-F2020-Test1/issues"
+  },
+  "homepage": "https://github.com/psychoCS/COMP229-F2020-Test1#readme"
 }
