--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "mongoose": "^5.10.9",
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.0.1",
     "popper.js": "^1.16.1"
   },
   "description": "Assignment 2 for  COMP229 Fall 2020",
