--- a/package.json
+++ b/package.json
@@ -29,7 +29,15 @@
   },
   "description": "Assignment 2 for  COMP229 Fall 2020",
   "main": "server.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/connect-flash": "0.0.35",
+    "@types/express": "^4.17.8",
+    "@types/express-session": "^1.17.0",
+    "@types/mongoose": "^5.7.36",
+    "@types/passport": "^1.0.4",
+    "@types/passport-local": "^1.0.33",
+    "@types/passport-local-mongoose": "^4.0.13"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/psychoCS/-COMP229-F2020-Assignment2.git"
